[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssnreduce"
version = "0.1.0"
description = "Faithful Python port of Joel Mortimer's supersonic-nozzle nucleation data-reduction pipeline (Ar+CO2 mixture; isentropic -> diabatic ODE -> nucleation -> growth)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Minh Quan Tran" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "CoolProp>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/ssnreduce"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
