[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssnreduce"
version = "0.1.1"
description = "Supersonic-nozzle condensation data-reduction pipeline: isentropic inversion, diabatic ODE (Wyslouzil 2000), CNT/MKNT nucleation rates (Kalikmanov 2006; Bhabhe 2012), Gyarmathy droplet growth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Minh Quan Tran", email = "quantm22@gmail.com" },
]
keywords = [
    "nucleation",
    "classical nucleation theory",
    "MKNT",
    "supersonic nozzle",
    "condensation",
    "carbon dioxide",
    "thermodynamics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "CoolProp>=6.6",
]

[project.urls]
Homepage = "https://github.com/MQuantran/ssnreduce"
Repository = "https://github.com/MQuantran/ssnreduce"
"Bug Tracker" = "https://github.com/MQuantran/ssnreduce/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/ssnreduce"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
